--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
+    "lodash": "^4.17.21",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
     "nodemon": "^2.0.22",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
+    "path-parser": "^6.1.0",
     "redux-thunk": "^2.4.2",
     "sendgrid": "^5.2.3",
     "stripe": "^12.12.0"
